--- a/Indentacion Correcta.html
+++ b/Indentacion Correcta.html
@@ -6,7 +6,12 @@
     <body>
         <table> 
             <thead>
-                <tr><th>Nombre</th><th>Apellido</th><th>Email</th><th>Password</th></tr>
+                <tr>
+                    <th>Nombre</th>
+                    <th>Apellido</th>
+                    <th>Email</th>
+                    <th>Password</th>
+                </tr>
             </thead>
             <tbody>
                 <tr>
