--- a/formularioderegistro.html
+++ b/formularioderegistro.html
@@ -36,8 +36,8 @@
                 </tbody>
             </table><br>
             <input type="radio" name="hombre"> Hombre</input>
-            <input type="radio" name="hombre"> Hombre</input>
-            <input type="radio" name="hombre"> Hombre</input><br><br>
+            <input type="radio" name="hombre"> Mujer</input>
+            <input type="radio" name="hombre"> Otro</input><br><br>
             <label for="descripcion">Una Breve Descripcion de ti:</label><br>
             <textarea name="descripcion"></textarea><br><br>    
             <label for="favlen">Lenguaje Favorito: </label>
