--- a/formularioderegistro.html
+++ b/formularioderegistro.html
@@ -5,7 +5,7 @@
         <title>Mi Formulario de Registro</title>
     </head>
     <body>
-        <hi>Mi Formulario de Registro</hi>
+        <h1>Mi Formulario de Registro</h1>
         <form>
             <table>
                 <tbody>
